objects/Speaker__c.object
<CustomObject>
    <label>Speaker</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Speakers</pluralLabel>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>About_Me__c</fullName>
        <label>About Me</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
</CustomObject>